--- a/force-app/main/default/lwc/bmiCalculator/bmiCalculator.css
+++ b/force-app/main/default/lwc/bmiCalculator/bmiCalculator.css
@@ -8,6 +8,12 @@
     --size-14:14px;
     --size-12:12px;
 }
+.app{
+    min-height: 100vh;
+    background-image: url(/sfsites/c/resource/BmiAppBackground);
+    background-size: cover;
+    background-repeat: no-repeat;
+}
 
 .box{
     max-width: 420px;
@@ -34,4 +40,24 @@ h1{
 h2{
     font-size: 26px;
     color: var(--light-pink);
+}
+label{
+    font-size: 20px;
+    color: var(--light-white);
+}
+input{
+    color: var(--dull-blue);
+    padding: 8px;
+    font-size: var(--size-16);
+}
+.custom-button{
+    font-size: var(--size-16);
+    padding: var(--size-12);
+    background: var(--light-pink);
+    color: var(--light-white);
+    border-color: var(--light-pink);
+}
+.result-value{
+    color: var(--light-blue);
+    font-size: 30px;
 }
