--- a/force-app/main/default/lwc/weatherApp/weatherApp.css
+++ b/force-app/main/default/lwc/weatherApp/weatherApp.css
@@ -1,11 +1,12 @@
 .app{
     background: #091f43;
-    height: 100vh;
+    min-height: 100vh;
+    padding: 12px;
 }
 .app-card{
     background: #ffffff;
     max-width: 400px;
-    min-width: 375px;
+    min-width: 350px;
     border-radius: 8px;
 }
 .flex-center{
@@ -58,4 +59,41 @@ button{
     border-radius: 5px;
     padding: 12px;
     margin: 12px;
+}
+.text-center{
+    text-align: center;
+}
+.temperature{
+    font-size: 60px;
+    font-weight: 700;
+    line-height: normal;
+    padding-top: 24px;
+}
+.description, .location{
+    font-size: 24px;
+    line-height: 32px;
+    padding-top: 20px;
+}
+footer{
+    display: flex;
+    justify-content: space-around;
+    text-align: center;
+    border-top: 1px solid #ccc;
+    
+}
+.feels_like{
+    width: 100%;
+    padding: 16px;
+}
+.humidity{
+    border-left: 1px solid #ccc;
+    width: 100%;
+    padding: 16px;
+}
+.weatherImg{
+    max-width: 125px;
+}
+.cursor{
+    cursor: pointer;
+
 }
